--- a/WatchWpfClient/Model/WatchConfig.json
+++ b/WatchWpfClient/Model/WatchConfig.json
@@ -1,5 +1,5 @@
 {
-  "URL":"https://watchserver.azurewebsites.net",
-  "LoginCode":"XPzq_T8G26OQkKukGMXCmjJZ8VvKk9CnGII_rwlD4BnVAzFuNll7Ng==",
-  "NewUserCode":"87IUpzWmV0urqislUXjrIn1piqKCD1Qxb7hTf-FHWNFpAzFu23feUw=="
+  "URL": "https://watchserver.azurewebsites.net/api/",
+  "LoginCode": "XPzq_T8G26OQkKukGMXCmjJZ8VvKk9CnGII_rwlD4BnVAzFuNll7Ng==",
+  "NewUserCode": "87IUpzWmV0urqislUXjrIn1piqKCD1Qxb7hTf-FHWNFpAzFu23feUw=="
 }
