Basic reading implemented

--- a/WatchWpfClient/WatchWpfClient.csproj
+++ b/WatchWpfClient/WatchWpfClient.csproj
@@ -33,10 +33,17 @@
     <Compile Update="Views\Controls\LogIn.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Views\Controls\MessagesDisplay.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
     <Page Update="Views\Controls\LogIn.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="Views\Controls\MessagesDisplay.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
