--- a/WatchWpfClient/Model/WatchConfig.json
+++ b/WatchWpfClient/Model/WatchConfig.json
@@ -1,5 +1,6 @@
 {
   "URL": "https://watchserver.azurewebsites.net/api/",
   "LoginCode": "XPzq_T8G26OQkKukGMXCmjJZ8VvKk9CnGII_rwlD4BnVAzFuNll7Ng==",
-  "NewUserCode": "87IUpzWmV0urqislUXjrIn1piqKCD1Qxb7hTf-FHWNFpAzFu23feUw=="
+  "NewUserCode": "87IUpzWmV0urqislUXjrIn1piqKCD1Qxb7hTf-FHWNFpAzFu23feUw==",
+  "ReadCode": "5hu0dBmIqQT6Ctq1jjOtFVyF_npXbdPiocJxrTn8k7fPAzFuPIjfcg=="
 }
