Redeployed to Azure. Key values and watch config updated. Tested and working in Azure.

--- a/WatchWpfClient/WatchWpfClient.csproj
+++ b/WatchWpfClient/WatchWpfClient.csproj
@@ -26,9 +26,9 @@
     <Resource Include="Views\Images\watch.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="WatchConfig.json">
+    <Content Include="WatchConfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
