--- a/WatchWpfClient/WatchConfig.json
+++ b/WatchWpfClient/WatchConfig.json
@@ -1,7 +1,9 @@
 {
-  "URL": "http://localhost:7071/api/",
-  "LoginCode": "XPzq_T8G26OQkKukGMXCmjJZ8VvKk9CnGII_rwlD4BnVAzFuNll7Ng==",
-  "NewUserCode": "87IUpzWmV0urqislUXjrIn1piqKCD1Qxb7hTf-FHWNFpAzFu23feUw==",
-  "ReadCode": "5hu0dBmIqQT6Ctq1jjOtFVyF_npXbdPiocJxrTn8k7fPAzFuPIjfcg==",
-  "WriteCode": "YEDeESFxPIM0AbT7YS7Nr0Jcd84qv0wctDGCqKWKT6NqAzFuNYn-vw=="
+  "URL": "https://watchapi.azurewebsites.net/api/",
+  "LoginCode": "oOc9qN4Mg3geUnIvVFWjEmjDT90GsSKRNNam7iVsKkn2AzFuUBippw==",
+  "NewUserCode": "nGrQnLosWNEhTJE3MDuVx4SXOCY4FfB6ZE3_D2VUAawIAzFu3BuwnQ==",
+  "ReadCode": "ofGnlt6DrZrHMIC5-TMzyKh_cIT2_2xVB-L8db2Yb082AzFu7nGhVQ==",
+  "WriteCode": "sTGtsgbxsYX7E4zfjJJfn-pPAcv51uk6TcYo2FIV4xomAzFu1EQTFQ==",
+  "GrantAccessCode": "vSUhF3WeKuob1dOt0oVN6fzTWtNL2ogmmp5BqBkBmRT7AzFuvRehWw==",
+  "PublicKeyCode": "MorB_mE59TeVSq9x02xoMyAGh0yr5aGfaumEUn4JIFhEAzFu4A6JNw=="
 }
