--- a/WatchWpfClient/WatchWpfClient.csproj
+++ b/WatchWpfClient/WatchWpfClient.csproj
@@ -6,10 +6,13 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <ApplicationIcon>Images\watch.ico</ApplicationIcon>
+    <RepositoryUrl>https://github.com/davecatling/Watch</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Images\Clock.png" />
+    <None Remove="Images\watch.ico" />
     <None Remove="Model\WatchConfig.json" />
     <None Remove="Views\Images\watch.ico" />
     <None Remove="WatchConfig.json" />
@@ -26,12 +29,20 @@
     <Resource Include="Views\Images\watch.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Content Include="Images\watch.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="WatchConfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Update="Views\Controls\NewUser.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -41,6 +52,13 @@
     <Compile Update="Views\Controls\MessagesDisplay.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
