WIP - PKCS private key request added, function key added to password reset request function.

--- a/WatchWpfClient/WatchConfig.json
+++ b/WatchWpfClient/WatchConfig.json
@@ -5,5 +5,6 @@
   "ReadCode": "ofGnlt6DrZrHMIC5-TMzyKh_cIT2_2xVB-L8db2Yb082AzFu7nGhVQ==",
   "WriteCode": "sTGtsgbxsYX7E4zfjJJfn-pPAcv51uk6TcYo2FIV4xomAzFu1EQTFQ==",
   "GrantAccessCode": "vSUhF3WeKuob1dOt0oVN6fzTWtNL2ogmmp5BqBkBmRT7AzFuvRehWw==",
-  "PublicKeyCode": "MorB_mE59TeVSq9x02xoMyAGh0yr5aGfaumEUn4JIFhEAzFu4A6JNw=="
+  "PublicKeyCode": "MorB_mE59TeVSq9x02xoMyAGh0yr5aGfaumEUn4JIFhEAzFu4A6JNw==",
+  "PasswordResetCode": "6CUORjOG0KrD-3SldTrWkjzF4V7a_5LlQUhtCYbBDUUkAzFu1Uf7uA=="
 }
