Added password validation to new user creation. Minor UI changes.

--- a/WatchWpfClient/WatchConfig.json
+++ b/WatchWpfClient/WatchConfig.json
@@ -1,5 +1,5 @@
 {
-  "URL": "http://localhost:7071/api/",
+  "URL": "https://watchapi.azurewebsites.net/api/",
   "LoginCode": "oOc9qN4Mg3geUnIvVFWjEmjDT90GsSKRNNam7iVsKkn2AzFuUBippw==",
   "NewUserCode": "nGrQnLosWNEhTJE3MDuVx4SXOCY4FfB6ZE3_D2VUAawIAzFu3BuwnQ==",
   "ReadCode": "ofGnlt6DrZrHMIC5-TMzyKh_cIT2_2xVB-L8db2Yb082AzFu7nGhVQ==",
